fixed white color on dark mode

--- a/script/css/mediaQuery.css
+++ b/script/css/mediaQuery.css
@@ -686,7 +686,6 @@
     --bgcolor: #333333;
     --fontColor: #ffffff;
     --black: #ffffff;
-    --white: #333333;
     --gray: #ffffff;
     --blue: #295768;
   }
